--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <meta property="og:title" content="iQuiz: Challenge Your Programming Skills" />
+<meta property="og:description" content="Test your programming knowledge with fun, interactive quizzes across various languages like Python, Java, C++, and more! Compete with others and level up your coding skills." />
+<meta property="og:image" content="%PUBLIC_URL%/iQuizLogo.png" />
+<!-- <meta property="og:url" content="https://yourwebsite.com" /> -->
+<meta property="og:type" content="website" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/iQuizLogo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
