--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="iQuiz - To Enhance your programming skills"
     />
 
     <meta property="og:title" content="iQuiz: Challenge Your Programming Skills" />
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>iQuiz - Enhance Programming Skills</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
